# ep

./: .gitignore  README.md  generate_random_embeddings_data.py  pyproject.toml
embedding-projector/: package-lock.json  package.json
embedding-projector/app/: layout.tsx  page.tsx
embedding-projector/app/components/: Projector.tsx  ProjectorScatterPlotAdapter.tsx  Visualizer.tsx
embedding-projector/app/lib/: DataSet.tsx  DimensionalityReducer.tsx  NearestNeighborSearcher.tsx  SearchComponent.tsx  dataLoader.ts
