[project]
name = "ep"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
dependencies = [
    "numpy>=2.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
